inject_result.txt
  File "<string>", line 34
    
    ^
SyntaxError: EOF while scanning triple-quoted string literal
